--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "cors": "^2.8.5",
     "json-server": "^0.17.0",
     "json-server-auth": "^2.1.0",
     "node-sass": "^7.0.1"
