--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "cors": "^2.8.5",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,9 +53,6 @@
     ]
   },
   "devDependencies": {
-    "cors": "^2.8.5",
-    "json-server": "^0.17.0",
-    "json-server-auth": "^2.1.0",
     "node-sass": "^7.0.1"
   }
 }
